--- a/stylemedical.css
+++ b/stylemedical.css
@@ -43,6 +43,7 @@ nav ul{
     background-color: black;
     list-style-type:none;
    text-shadow:  0px 0px 6px white; 
+        border-radius: 30px;
 }
 nav ul li a {
     text-decoration: none;
@@ -50,7 +51,8 @@ nav ul li a {
     text-align:center;
     font size:28px;
     padding:15px 25px;
-    color:darkgray;
+    color:white;
+        border-radius: 30px;
 }
 nav ul li a:hover{
     color: azure;
@@ -65,94 +67,55 @@ nav ul li a:hover{
     background-color:cadetblue;
     color: azure;
 }
-
-.ban1{
-    background: linear-gradient(rgba(0,0,0,0.0),rgba(0,0,0,0)),url(zs/health-routine.png);
-    min-height:90vh;
-    background-attachment: fixed;
-    background-repeat: no-repeat;
-    background-size: 1450px 900px;
-    display:flex;
-    align-items: center;
-    
-    
-   
-}
-
 .ban2{
-    background: linear-gradient(rgba(0,0,0,0.0),rgba(0,0,0,0)),url(zs/7086.jpg);
+    background: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)),url(zs/7086.jpg);
     min-height:90vh;
     background-attachment: fixed;
     background-repeat: no-repeat;
     background-size: 1450px 900px;
     display:flex;
+    margin-top: 10px;
     align-items: center;
+        border-radius: 30px;
     
-    
-   
 }
-
-
 
 .name_1{
-    position: absolute;
-    top:35%;
-    left:20%;
+     position: absolute;
+    top:40%;
+    left:9%;
     text-align: center;
-    width:60%;
-    color: ;
-    
+    width:80%;
+    color: white;
+    text-shadow:  50px 20px 6px #000000;
     font-family:'Risque', cursive;
-    font-size: 200px;
+    font-size: 80px;
+    border-radius: 30px;
+   margin-top: 3px;
+    transition: width 1s,height 1s,font-size 1s;
 }
-.intro_1 h2{
-    font-size: 59px;
-    color: black;
-    font-family: 'Bellefair', serif; 
-    text-align: center;
-    
-}
-.intro_1{
-    font-family: 'Bellefair', serif;
-    background-color:white;
-    font-size: 30px;
-    width:700px;
-    text-align: left;
-    position:absolute;
-    left:140px;
-    padding: 10px 40px 40px 40px;
+.name_1:hover {
+    width: 1200px;
+    height: 100px;
+    font-size: 100px;
 }
 
-.intro_9{
-    font-family: 'Bellefair', serif;
+.intro_1{
+    margin
+        font-family: 'Bellefair', serif;
     background-color:white;
     font-size: 30px;
-    width:700px;
+    width:800px;
     text-align: left;
     position:absolute;
-    left:140px;
-    top: 600px;
-    padding: 10px 40px 40px 40px;
-    
-    }
-.intro_8 p{
-    width: 100%;
-    height: 100px;
-    font-family: 'Bellefair', serif;
-    background-color:white;
-    font-size: 30px;
-    width:700px;
-    text-align: left;
-    position:absolute;
-    left:300px;
-    top: 500px;
-    padding: 10px 40px 40px 40px;
-    
+    left:10px;
+    padding: 100px 60px 40px 100px;
 }
+
 
 .intro_fitness{
     width: 100%;
-    height: 100px;
+
 }
 
 .intro_img{
@@ -164,47 +127,34 @@ nav ul li a:hover{
 }
 .divy_g{
     position: relative;
-    top: 560px;
-    height: 1000px;
+    top: 580px;
+    height: 550px;
     background-color:black;
+    border-radius: 30px;
 }
 .divy_z {
     background: linear-gradient(rgba(0,0,0,0),rgba(0,0,0,0)),url(https://upriteergo.com/wp-content/uploads/2016/01/workaholic.jpg);
-    min-height:120vh;
-   padding-top: 900px;
-    background-size:50% 850px;
+    min-height:70.2vh;
+    background-size:55% 790px;
     background-attachment: fixed;
     background-repeat: no-repeat;
     display:flex;
+    border-radius: 30px;
 
 }
 .divy_1{
+    border-radius: 30px;
     position:absolute;
     width: 500px;
     height: 400px;
     left: 60%;
-    top: 20%;
+    top: 9%;
     color: white;
-    font-family:'Bellefair', serif
-    font-size: 25px;
+    font-family:'aladin', cursive;
+    font-size: 30px;
     text-align: center;
 }
 
-.posts_z{
-    
-    background-size:100%;
-    background-attachment: fixed;
-    display:flex;
-    width:100%;
-    height: 700px;
-    padding: 10px 72px 72px 72px;
-    position: absolute;
-    top: 1900px;
-    background-color:white;
-    background-image: url(http://hellodollface.com/wp-content/uploads/2013/10/meditatio1.jpg);
-    max-width:100%;
-    max-height:100%;
-}
 .posts_y{
     
     background-size:100%;
@@ -214,40 +164,29 @@ nav ul li a:hover{
     height: 700px;
     padding: 10px 72px 72px 72px;
     position: absolute;
-    top: 1900px;
+    top: 1930px;
     background-color: white;
     background-image: url(ZS/402977761-health-wallpapers.jpg);
     max-width:100%;
     max-height:100%;
     background-repeat: no-repeat;
+    border-radius: 30px;
 }
 
 .posts_y h2{
     text-align: center;
-    font-family:'Dosis', sans-serif;
-    font-size: 38px;
+    font-family:'aladin', cursive;
+    font-size: 42px;
      position: absolute;
-    top: 3%;
+    top: 10%;
     width: 700px;
+    height: 400px;
     left: 100px;
     
 }
 
-.posts_z h2{
-    font-size: 79px;
-    font-family:'Aladin', cursive; 
-    text-align: center;
-    text-shadow:  10px 10px 10px white;
-    position: absolute;
-    left: 10%;
-    top:40px;
-}
-.posts_y h1:hover{
-   border: 1px solid black;
-   font-size: 40px;
-   color:antiquewhite;
-   background-color: rgba(7,9, 9, 0.8);
-}
+
+
 .posts_y h1{
     text-align: center;
     font-family:'Dosis', sans-serif;
@@ -256,130 +195,14 @@ nav ul li a:hover{
     text-decoration: none;
     background-color: rgba(255, 255, 255,0.69);
 }
-.headings_posts1{
-    position: absolute;
-    top: 40%;
-    width: 250px;
-    left: 150px;
-}
-.headings_posts2{
-    position: absolute;
-    top: 55%;
-    width:280px;
-    left: 570px;
-}
-.headings_posts3{
-    position: absolute;
-    top: 60%;
-    width: 240px;
-    left: 1000px;
-}
-.headings_posts4{
-    position: absolute;
-    top: 45%;
-    height: 100px;
-    width: 150px;
-    left: 1050px;
-}
+
 
 .headings_posts5{
     position: absolute;
-    top: 60%;
+    top: 70%;
     width: 250px;
     left: 300px;
     color: black;
     background-color: lightgrey;
 }
 
-.divy_g1{
-    position: relative;
-    top: 640px;
-    height: 820px;
-    background-color:black;
-}
-.divy_z1 {
-    height: 1000px;
-    background: linear-gradient(rgba(0,0,0,0.0),rgba(0,0,0,0.0)),url(ZS/meditation-2214532.jpg);
-    min-height:120vh;
-    background-size: 100% 800px;
-    background-attachment: fixed;
-    background-repeat: no-repeat;
-    display:flex;
-}
-.divy_11{
-    position:absolute;
-    width: 400px;
-    height: 400px;
-    left: 68%;
-    top: 25%;
-    color: whitesmoke;
-     text-shadow:  6px 6px 6px black ;
-    font-family:'Bellefair', serif
-    font-size: 28px;
-    text-align: center;
-}
-.food_gallery_z h2{
-    font-size: 79px;
-    font-family:'Aladin', cursive; 
-    text-align: center;
-    text-shadow:  10px 10px 10px white;
-    position: absolute;
-    left: 30%;
-    top:40px;
-}
-.food_gallery_z{
-    position:relative;
-    top: 300px;
-    width: 100%;
-    height:600px;
-    background: linear-gradient(rgba(0,0,0,0.8),rgba(0,0,0,0.5)),url(pics/12.jpg);
-    min-height:80vh;
-    background-size: cover;
-    background-attachment:local;
-}
-.food_gallery_z button{
-    text-decoration: none;
-    position: relative;
-    left: 45%;
-    top: 60px;
-    height: 60px;
-    width: 150px;
-    border: 1px solid black;
-    background-color: azure;
-    
-}
-.food_gallery_z button a{
-    text-decoration: none;
-     color:dimgrey;
-    font-size: 24px;
-    font-family: 'Bellefair', serif
-}
-.photo1234 {
-    padding: 150px 10px 10px 80px;
-}
-.photo123 img{
-    width: 300px;
-    height: 300px;
-    float: left;
-    padding: 10px;
-    margin-left: 50px;
-}
-.kaur img{
-    position:absolute;
-    width: 600px;
-    border-radius:30px;
-    
-}
-.thind{
-    font-family: ;
-    font-size: 28px;
-    position: absolute;
-    left: 600px;
-    padding: 40px;
-}
-.preet{
-    position: absolute;
-    top:400px;
-    font-size: 28px;
-    padding-left: 40px;
-}
