--- a/styles.css
+++ b/styles.css
@@ -62,7 +62,7 @@ nav ul li a:hover{
 }
 
 .ban1{
-    background: linear-gradient(rgba(0,0,0,0.0),rgba(0,0,0,0.0)),url(pics/banner.png);
+    background: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)),url(pics/banner.png);
     border-radius: 30px;
     min-height:90vh;
     background-attachment: fixed;
@@ -79,7 +79,6 @@ nav ul li a:hover{
     text-align: center;
     width:60%;
     color: white;
-    background-color: #424259;
     font-family:'Risque', cursive;
     font-size: 100px;
     text-shadow:  50px 20px 6px #000000;
@@ -141,16 +140,16 @@ nav ul li a:hover{
 }
 .div_quote1{
     position: relative;
-    top: 550px;
-    height: 670px;
+    top: 520px;
+    height: 550px;
     background-color:black;
     border-radius: 30px;
 }
 
 .div_quote11{
     background: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)),url(pics/5.jpg);
-    min-height:68.5vh;
-   background-size:50% 850px;
+    min-height:70vh;
+   background-size:50% 800px;
     background-attachment: fixed;
     background-repeat: no-repeat;
     display:flex;
@@ -162,7 +161,7 @@ nav ul li a:hover{
     width: 500px;
     height: 400px;
     left: 60%;
-    top: 5%;
+    top: 15%;
     color: white;
     font-family:'Freckle Face', cursive;
     font-size: 30px;
@@ -194,7 +193,7 @@ nav ul li a:hover{
     background-attachment: fixed;
     padding: 172px 72px 72px 72px;
     position: relative;
-    top: 465px;
+    top: 530px;
     background-color:white;
     width: 100%;
     height: 830px;
@@ -261,11 +260,12 @@ nav ul li a:hover{
 }
 .div_quote21 {
     background: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)),url(pics/11.jpg);
-    min-height:100vh;
-    background-size: 100% 835px;
+    min-height:102vh;
+    background-size: 100% 860px;
     background-attachment: fixed;
     background-repeat: no-repeat;
     display:flex;
+    margin-top:75px;
     border-radius: 30px;
 }
 .div_quote22{
@@ -362,15 +362,27 @@ nav ul li a:hover{
     min-height:80vh;
     background-size: cover;
     background-attachment:local;
+    border-radius: 30px;
 }
 .heading_gallery{
-    position:absolute;
-    top: 45%;
-    left: 40%;
-    font-size: 80px;
-    font-family: 'Risque',cursive;
-    color: aliceblue;
-    text-shadow:  30px 30px 26px #000000;
+    position: absolute;
+    top:40%;
+    left:20%;
+    text-align: center;
+    width:60%;
+    color: white;
+    text-shadow:  50px 20px 6px #000000;
+    font-family:'Risque', cursive;
+    font-size: 100px;
+    border-radius: 30px;
+   margin-top: 3px;
+    transition: width 1s,height 1s,font-size 1s;
+      float: right;
+}
+.heading_gallery:hover {
+    width: 900px;
+    height: 1100px;
+    font-size: 150px;
 }
 .row { 
     display: flex;
@@ -441,6 +453,8 @@ div.gallery:hover {
     top:20px;
 }
 .food_gallery_z{
+      margin-top: 180px;
+   
     position:relative;
     top: 300px;
     width: 100%;
