--- a/stylecj.css
+++ b/stylecj.css
@@ -62,7 +62,7 @@ nav ul li a:hover{
 }
 
 .ban1{
-    background: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)),url(cj/fitness-tips.jpg);
+    background: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)),url(CJ/fitness-tips.jpg);
     border-radius: 30px;
     min-height:90vh;
     background-attachment: fixed;
@@ -129,7 +129,7 @@ nav ul li a:hover{
   
 }
 .divy_z {
-    background: linear-gradient(rgba(0,0,0,0.1),rgba(0,0,0,0.1)),url(cj/Fitness_Clip_Art_-_Copy.jpg);
+    background: linear-gradient(rgba(0,0,0,0.1),rgba(0,0,0,0.1)),url(CJ/Fitness_Clip_Art_-_Copy.jpg);
     border-radius: 30px;
     min-height:68.5vh;
     background-size:50% 850px;
@@ -216,7 +216,7 @@ nav ul li a:hover{
     background-color:black;
 }
 .divy_z1 {
-    background: linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.3)),url(Cj/17157769_821808404624667_6200170980425300372_o.jpg);
+    background: linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.3)),url(CJ/17157769_821808404624667_6200170980425300372_o.jpg);
     height: 800px;
     min-height:100vh;
     border-radius: 30px;
