--- a/stylemedical.css
+++ b/stylemedical.css
@@ -68,7 +68,7 @@ nav ul li a:hover{
     color: azure;
 }
 .ban2{
-    background: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)),url(zs/7086.jpg);
+    background: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)),url(ZS/7086.jpg);
     min-height:90vh;
     background-attachment: fixed;
     background-repeat: no-repeat;
