--- a/styles.css
+++ b/styles.css
@@ -356,7 +356,7 @@ nav ul li a:hover{
 
 .header_gallery {
     align-items: center;
-    background: linear-gradient(rgba(0,0,0,0.8),rgba(0,0,0,0.5)),url(pics/168.JPG);
+    background: linear-gradient(rgba(0,0,0,0.8),rgba(0,0,0,0.5)),url(pics/168.jpg);
     min-height:80vh;
     background-size: cover;
     background-attachment:local;
