--- a/stylecj.css
+++ b/stylecj.css
@@ -62,7 +62,7 @@ nav ul li a:hover{
 }
 
 .ban1{
-    background: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)),url(CJ/Fitness-Tips.jpg);
+    background: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)),url(ZS/Fitness-Tips.jpg);
     border-radius: 30px;
     min-height:90vh;
     background-attachment: fixed;
